# cpp-jatkokurssi

./: README.md  build.sh  mittaustulokset
src/: CMakeLists.txt
src/teht1_smart_pointers/: Henkilo.cpp  Log_Ptr.cpp  Manageri.cpp  main.cpp
src/teht2_rinnakkaisuus/: draw.cpp  main.cpp  vars.cpp
src/teht3_sillisalaattia/: roolipeli.cpp  teht1.html  teht1.md
